--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -77,7 +77,7 @@ cxx_link(dfly_test_lib dragonfly_lib facade_test gtest_main_ext)
 
 
 add_executable(dfly_bench dfly_bench.cc)
-cxx_link(dfly_bench dfly_facade fibers2)
+cxx_link(dfly_bench dfly_facade fibers2 absl::random_random)
 
 cxx_test(dragonfly_test dfly_test_lib LABELS DFLY)
 cxx_test(multi_test dfly_test_lib LABELS DFLY)
