--- a/src/core/search/CMakeLists.txt
+++ b/src/core/search/CMakeLists.txt
@@ -3,11 +3,13 @@ gen_bison(parser)
 
 cur_gen_dir(gen_dir)
 
-add_library(query_parser base.cc ast_expr.cc query_driver.cc search.cc indices.cc sort_indices.cc vector_utils.cc
-            compressed_sorted_set.cc ${gen_dir}/parser.cc ${gen_dir}/lexer.cc)
+add_library(query_parser base.cc ast_expr.cc query_driver.cc search.cc indices.cc
+            sort_indices.cc vector_utils.cc compressed_sorted_set.cc block_list.cc
+            ${gen_dir}/parser.cc ${gen_dir}/lexer.cc)
 
 target_link_libraries(query_parser base absl::strings TRDP::reflex TRDP::uni-algo TRDP::hnswlib)
 
 cxx_test(compressed_sorted_set_test query_parser LABELS DFLY)
+cxx_test(block_list_test query_parser LABELS DFLY)
 cxx_test(search_parser_test query_parser LABELS DFLY)
 cxx_test(search_test query_parser LABELS DFLY)
