--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,11 +119,11 @@ jobs:
           # once the build is over, we want to generate a Debian package
           if [ -f /etc/debian_version ]; then
             ./tools/packaging/generate_debian_package.sh ${{ env.RELEASE_DIR }}/dragonfly-x86_64
-            ./tools/packaging/generate_debian_package.sh ${{ env.RELEASE_DIR }}/dragonfly-x86_64-dbg
+            ./tools/packaging/generate_debian_package.sh ${{ env.RELEASE_DIR }}/dragonfly-dbg-x86_64
           else
             echo "Creating package for ${{github.ref_name}}"
             ./tools/packaging/rpm/build_rpm.sh ${{ env.RELEASE_DIR }}/dragonfly-x86_64.tar.gz ${{github.ref_name}}
-            ./tools/packaging/rpm/build_rpm.sh ${{ env.RELEASE_DIR }}/dragonfly-x86_64-dbg.tar.gz ${{github.ref_name}}
+            ./tools/packaging/rpm/build_rpm.sh ${{ env.RELEASE_DIR }}/dragonfly-dbg-x86_64.tar.gz ${{github.ref_name}}
           fi
 
       - name: Run regression tests
