--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -141,7 +141,7 @@ jobs:
           mkdir -p results-artifacts
           if [ -f /etc/debian_version ]; then
             mv ${{ env.RELEASE_DIR }}/dragonfly-*tar.gz results-artifacts
-            mv dragonfly_*.deb results-artifacts
+            mv dragonfly*.deb results-artifacts
           else
             ls -l *.rpm
             mv ./*.rpm ./results-artifacts/
