feat: a test with flat buffers
Also, add an experimental flag `--experimental_flat_json` that allows writing json objects as flat strings using
flexibuffers.

The experiment shows that `debug populate 100000 a 10 type json elements 30`
uses almost 3 times less memory than with native jsoncons objects.

Signed-off-by: Roman Gershman <roman@dragonflydb.io>

--- a/.devcontainer/alpine/devcontainer.json
+++ b/.devcontainer/alpine/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "helio",
+  "name": "alpine-dev",
   "image": "ghcr.io/romange/alpine-dev",
   "customizations": {
     "vscode": {
@@ -10,11 +10,13 @@
         "twxs.cmake"
       ],
       "settings": {
-        "cmake.buildDirectory": "${workspaceFolder}/build-alpine"
+        "cmake.buildDirectory": "/build",
+        "cmake.configureArgs": []
       }
     }
   },
   "mounts": [
-    "source=alpine-vol,target=/root,type=volume"
-  ]
+    "source=alpine-vol,target=/build,type=volume"
+  ],
+  "postCreateCommand": ".devcontainer/alpine/post-create.sh ${containerWorkspaceFolder}"
 }
