--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -69,7 +69,7 @@ cxx_link(dfly_transaction dfly_core strings_lib TRDP::fast_float)
 cxx_link(dragonfly_lib dfly_transaction dfly_facade redis_lib awsv2_lib jsonpath
          strings_lib html_lib
          http_client_lib absl::random_random TRDP::jsoncons ${ZSTD_LIB} TRDP::lz4
-         TRDP::croncpp)
+         TRDP::croncpp ${FLATBUF_TARGET})
 
 if (DF_USE_SSL)
   set(TLS_LIB tls_lib)
