--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,11 +142,12 @@ jobs:
           run-only-on-ubuntu-latest: true
           build-folder-name: build
           filter: "not slow"
-      - name: Upload cache log
+      - name: Upload logs on failure
+        if: failure()
         uses: actions/upload-artifact@v3
         with:
-          name: sccache_log.txt
-          path: /tmp/sccache_log.txt
+          name: unit_logs
+          path: /tmp/*INFO*
 
   lint-test-chart:
     runs-on: ubuntu-latest
