feat: move lint test chart to seperate action and trigger it on reg tests

--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -48,3 +48,9 @@ jobs:
         with:
           name: logs
           path: /tmp/dragonfly.*
+
+      - name: Lint test chart
+        if: success()
+
+  lint-test-chart:
+    uses: ./.github/actions/lint-test-chart
