--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,57 +149,4 @@ jobs:
           path: /tmp/sccache_log.txt
 
   lint-test-chart:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Set up Helm
-        uses: azure/setup-helm@v3
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.9"
-          check-latest: true
-
-      - name: Chart Rendering Tests
-        run: |
-          go test -v ./contrib/charts/dragonfly/...
-
-      - name: Set up chart-testing
-        uses: helm/chart-testing-action@v2.6.1
-
-      - name: Run chart-testing (list-changed)
-        id: list-changed
-        run: |
-          changed=$(ct list-changed --config .ct.yaml)
-          if [[ -n "$changed" ]]; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Run chart-testing (lint)
-        run: |
-          ct \
-            lint \
-            --config .ct.yaml \
-            ${{github.event_name == 'workflow_dispatch' && '--all'}} ;
-
-      - if: steps.list-changed.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
-        name: Create kind cluster
-        uses: helm/kind-action@v1.8.0
-
-      - if: steps.list-changed.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
-        name: Getting cluster ready
-        run: |
-          kubectl label nodes chart-testing-control-plane key/node-kind=high-memory
-
-      - name: Run chart-testing (install)
-        run: |
-          ct \
-            install \
-            --config .ct.yaml \
-            --debug \
-            --helm-extra-set-args "--set=image.repository=ghcr.io/${{ github.repository }},probes=null" \
-            ${{github.event_name == 'workflow_dispatch' && '--all'}} ;
+    uses: ./.github/actions/lint-test-chart
