--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,4 +149,5 @@ jobs:
           path: /tmp/sccache_log.txt
 
   lint-test-chart:
-    uses: ./.github/actions/lint-test-chart
+    - name: lint test chart
+      uses: ./.github/actions/lint-test-chart
