--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -53,4 +53,5 @@ jobs:
         if: success()
 
   lint-test-chart:
-    uses: ./.github/actions/lint-test-chart
+    - name: lint test chart
+      uses: ./.github/actions/lint-test-chart
