--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -54,4 +54,5 @@ jobs:
 
   lint-test-chart:
     - name: lint test chart
+      runs-on: ubuntu-latest
       uses: ./.github/actions/lint-test-chart
