--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,6 +149,6 @@ jobs:
           path: /tmp/sccache_log.txt
 
   lint-test-chart:
-    - name: lint test chart
-      runs-on: ubuntu-latest
-      uses: ./.github/actions/lint-test-chart
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ./.github/actions/lint-test-chart
