If the image.tag version is equal to 14.0.0 or greater then specify the DFLY_requirepass environment variable. Otherwise use the DFLY_PASSWORD environment variable.
Signed-off-by: Michael Primeaux <michael.primeaux@mac.com>

--- a/contrib/charts/dragonfly/ci/passwordsecret-values.golden.yaml
+++ b/contrib/charts/dragonfly/ci/passwordsecret-values.golden.yaml
@@ -101,7 +101,7 @@ spec:
             requests: {}
           
           env:
-            - name: DFLY_PASSWORD
+            - name: DFLY_requirepass
               valueFrom:
                 secretKeyRef:
                   name: dfly-password
