--- a/contrib/charts/dragonfly/ci/persistence-and-existing-secret.golden.yaml
+++ b/contrib/charts/dragonfly/ci/persistence-and-existing-secret.golden.yaml
@@ -104,7 +104,7 @@ spec:
             - mountPath: /data
               name: "test-data"
           env:
-            - name: DFLY_PASSWORD
+            - name: DFLY_requirepass
               valueFrom:
                 secretKeyRef:
                   name: dfly-password
