--- a/contrib/charts/dragonfly/ci/tlsimagetag-values.golden.yaml
+++ b/contrib/charts/dragonfly/ci/tlsimagetag-values.golden.yaml
@@ -85,7 +85,7 @@ spec:
       serviceAccountName: test-dragonfly
       containers:
         - name: dragonfly
-          image: "docker.dragonflydb.io/dragonflydb/dragonfly:v1.14.1"
+          image: "docker.dragonflydb.io/dragonflydb/dragonfly:v1.13.1"
           imagePullPolicy: IfNotPresent
           ports:
             - name: dragonfly
@@ -123,7 +123,7 @@ spec:
             - mountPath: /etc/dragonfly/tls
               name: tls
           env:
-            - name: DFLY_requirepass
+            - name: DFLY_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: dfly-password
