--- a/contrib/charts/dragonfly/ci/password-old-env-values.golden.yaml
+++ b/contrib/charts/dragonfly/ci/password-old-env-values.golden.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     app.kubernetes.io/name: dragonfly
     app.kubernetes.io/instance: test
-    app.kubernetes.io/version: "v1.13.0"
+    app.kubernetes.io/version: "v1.14.2"
     app.kubernetes.io/managed-by: Helm
 ---
 # Source: dragonfly/templates/extra-manifests.yaml
@@ -28,7 +28,7 @@ metadata:
   labels:
     app.kubernetes.io/name: dragonfly
     app.kubernetes.io/instance: test
-    app.kubernetes.io/version: "v1.13.0"
+    app.kubernetes.io/version: "v1.14.2"
     app.kubernetes.io/managed-by: Helm
 spec:
   type: ClusterIP
@@ -50,7 +50,7 @@ metadata:
   labels:
     app.kubernetes.io/name: dragonfly
     app.kubernetes.io/instance: test
-    app.kubernetes.io/version: "v1.13.0"
+    app.kubernetes.io/version: "v1.14.2"
     app.kubernetes.io/managed-by: Helm
 spec:
   replicas: 1
@@ -101,7 +101,7 @@ spec:
             requests: {}
           
           env:
-            - name: DFLY_requirepass
+            - name: DFLY_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: dfly-password
