--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v5
       - name: Install dependencies
         run: |
           python -m pip install pre-commit
@@ -53,19 +53,31 @@ jobs:
 
     container:
       image: ghcr.io/romange/${{ matrix.container }}
+      volumes:
+        - /:/hostroot
+
       credentials:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: true
-      - name: Install dependencies
+      - name: Prepare Environment
         run: |
           uname -a
           cmake --version
           mkdir -p ${GITHUB_WORKSPACE}/build
+
+          echo "===================Before freeing up space ============================================"
+          df -h
+          rm -rf /hostroot/usr/share/dotnet
+          rm -rf /hostroot/usr/local/share/boost
+          rm -rf /hostroot/usr/local/lib/android
+          rm -rf /hostroot/opt/ghc
+          echo "===================After freeing up space ============================================"
+          df -h
 
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.3
@@ -94,9 +106,15 @@ jobs:
       - name: Build
         run: |
           cd ${GITHUB_WORKSPACE}/build
+          ninja search_family_test
+          df -h
+          echo "-----------------------------"
           ninja src/all
-          ${SCCACHE_PATH} --show-stats | tee $GITHUB_STEP_SUMMARY
-
+      - name: PostFail
+        if: failure()
+        run: |
+          echo "disk space is:"
+          df -h
       - name: C++ Unit Tests
         run: |
           cd ${GITHUB_WORKSPACE}/build
