--- a/src/core/json/CMakeLists.txt
+++ b/src/core/json/CMakeLists.txt
@@ -3,8 +3,8 @@ gen_bison(jsonpath_grammar)
 
 cur_gen_dir(gen_dir)
 
-add_library(jsonpath lexer_impl.cc driver.cc
+add_library(jsonpath lexer_impl.cc driver.cc path.cc
             ${gen_dir}/jsonpath_lexer.cc ${gen_dir}/jsonpath_grammar.cc)
-target_link_libraries(jsonpath base absl::strings TRDP::reflex)
+target_link_libraries(jsonpath base absl::strings dfly_core TRDP::reflex TRDP::jsoncons)
 
 cxx_test(jsonpath_test jsonpath LABELS DFLY)
