--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -8,3 +8,4 @@ asyncio_mode=auto
 addopts = -ra --emoji
 markers =
   slow: marks tests as slow (deselect with '-m "not slow"')
+  opt_only: marks tests that are only reasonable to run against an opt-built Dragonfly
