--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -13,18 +13,18 @@ cxx_link(dfly_core base absl::flat_hash_map absl::str_format redis_lib TRDP::lua
     fibers2 ${SEARCH_LIB} TRDP::jsoncons OpenSSL::Crypto TRDP::dconv)
 
 add_executable(dash_bench dash_bench.cc)
-cxx_link(dash_bench dfly_core)
+cxx_link(dash_bench dfly_core redis_test_lib)
 
 cxx_test(dfly_core_test dfly_core LABELS DFLY)
 cxx_test(compact_object_test dfly_core LABELS DFLY)
 cxx_test(extent_tree_test dfly_core LABELS DFLY)
 cxx_test(external_alloc_test dfly_core LABELS DFLY)
-cxx_test(dash_test dfly_core file DATA testdata/ids.txt LABELS DFLY)
+cxx_test(dash_test dfly_core file redis_test_lib DATA testdata/ids.txt LABELS DFLY)
 cxx_test(interpreter_test dfly_core LABELS DFLY)
 cxx_test(json_test dfly_core TRDP::jsoncons LABELS DFLY)
 cxx_test(lru_test dfly_core LABELS DFLY)
 cxx_test(string_set_test dfly_core LABELS DFLY)
 cxx_test(string_map_test dfly_core LABELS DFLY)
-cxx_test(sorted_map_test dfly_core LABELS DFLY)
+cxx_test(sorted_map_test dfly_core redis_test_lib LABELS DFLY)
 cxx_test(bptree_set_test dfly_core LABELS DFLY)
 cxx_test(score_map_test dfly_core LABELS DFLY)
