--- a/src/redis/CMakeLists.txt
+++ b/src/redis/CMakeLists.txt
@@ -10,13 +10,13 @@ endif()
 
 add_library(redis_lib crc16.c crc64.c crcspeed.c debug.c  intset.c geo.c 
             geohash.c geohash_helper.c t_zset.c
-            listpack.c mt19937-64.c lzf_c.c lzf_d.c sds.c
-            quicklist.c rax.c pqsort.c redis_aux.c siphash.c t_stream.c 
+            listpack.c lzf_c.c lzf_d.c sds.c
+            quicklist.c rax.c redis_aux.c t_stream.c 
             util.c ziplist.c hyperloglog.c ${ZMALLOC_SRC})
 
 cxx_link(redis_lib  ${ZMALLOC_DEPS})
 
-add_library(redis_test_lib dict.c)
+add_library(redis_test_lib dict.c siphash.c)
 cxx_link(redis_test_lib redis_lib)
 
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
