--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -41,6 +41,8 @@ jobs:
           gspace-secret: ${{ secrets.GSPACES_BOT_DF_BUILD }}
           run-only-on-ubuntu-latest: false
           build-folder-name: build
+          # This expression serves as a ternary operator, i.e. if the condition holds it returns
+          # 'not NON_EXISTING_MARK' otherwise not opt_only.
           # Do not filter anything in Release, but do not run opt_only in Debug. Unfortunately an
           # empty string creates a 'false' expression, so we use a non existing mark
           filter: ${{ matrix.build-type == 'Release' && 'not NON_EXISTING_MARK' || 'not opt_only' }}
