--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: logs
-          path: /tmp/dragonfly.*
+          path: /tmp/failed/*
 
   lint-test-chart:
     runs-on: ubuntu-latest
