--- a/tools/packaging/Dockerfile.ubuntu-prod
+++ b/tools/packaging/Dockerfile.ubuntu-prod
@@ -25,7 +25,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN --mount=type=tmpfs,target=/var/cache/apt \
     --mount=type=tmpfs,target=/var/lib/apt/lists \
     apt -q update && \
-    apt install -q -y --no-install-recommends netcat-openbsd ca-certificates redis-tools
+    apt install -q -y --no-install-recommends netcat-openbsd ca-certificates redis-tools net-tools
 
 RUN groupadd -r -g 999 dfly && useradd -r -g dfly -u 999 dfly
 RUN mkdir /data && chown dfly:dfly /data
