print ulimit on docker

--- a/.github/workflows/daily-sanitizers.yml
+++ b/.github/workflows/daily-sanitizers.yml
@@ -61,6 +61,9 @@ jobs:
 
       - name: Configure & Build
         run: |
+          echo "ulimit is"
+          ulimit -s
+          echo "-----------------------------"
           echo "disk space is:"
           df -h
           echo "-----------------------------"
