feat(tiering): SImplest MVP

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -53,7 +53,7 @@ add_library(dragonfly_lib engine_shard_set.cc channel_store.cc
             cluster/cluster_shard_migration.cc cluster/outgoing_slot_migration.cc
             acl/user.cc acl/user_registry.cc acl/acl_family.cc
             acl/validator.cc acl/helpers.cc
-            tiering/op_manager.cc)
+            tiering/op_manager.cc tiering/disk_storage.cc)
 
 if (DF_ENABLE_MEMORY_TRACKING)
   target_compile_definitions(dragonfly_lib PRIVATE DFLY_ENABLE_MEMORY_TRACKING)
@@ -105,6 +105,7 @@ cxx_test(acl/user_registry_test dfly_test_lib LABELS DFLY)
 cxx_test(acl/acl_family_test dfly_test_lib LABELS DFLY)
 cxx_test(engine_shard_set_test dfly_test_lib LABELS DFLY)
 cxx_test(tiering/op_manager_test dfly_test_lib LABELS DFLY)
+cxx_test(tiering/disk_storage_test dfly_test_lib LABELS DFLY)
 
 
 add_custom_target(check_dfly WORKING_DIRECTORY .. COMMAND ctest -L DFLY)
