--- a/.github/workflows/daily-sanitizers.yml
+++ b/.github/workflows/daily-sanitizers.yml
@@ -85,8 +85,7 @@ jobs:
       - name: Test
         run: |
             cd $GITHUB_WORKSPACE/build
-            #ctest -V -L DFLY
-            ctest -V -R search_family_test
+            ctest -V -L DFLY
 
       - name: Send notifications on failure
         if: failure()
